overlay alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -582,7 +582,7 @@ nav {
     height: 200px;
     padding: 20px;
     align-items: center;
-    margin: 20px auto;
+    /* margin: 10px auto; */
 }
 
 .primary-overlay-image {
@@ -643,7 +643,7 @@ nav {
 }
 
 .secondary-overylay-item {
-    margin-top: 25px;
+    margin-top: 22px;
     padding: 0 20px;
 }
 
